--- a/app/views/boards/index.html.erb
+++ b/app/views/boards/index.html.erb
@@ -1,12 +1,11 @@
 <div>
   <div>
     <h1>
-      List of all boards
+      All boards
     </h1>
   </div>
 </div>
 
-<hr>
 
 <div>
   <div>
@@ -24,7 +23,7 @@
       </div>
 
       <button>
-        Create board
+        Add board
       </button>
     </form>
   </div>
@@ -33,54 +32,10 @@
 <hr>
 <div>
   <div>
-    <table border="1">
-      <tr>
-        <th>
-          ID
-        </th>
-
-        <th>
-          Name
-        </th>
-
-        <th>
-          Created at
-        </th>
-
-        <th>
-          Updated at
-        </th>
-
-        <th>
-        </th>
-      </tr>
-
-      <% @list_of_boards.each do |a_board| %>
-      <tr>
-        <td>
-          <%= a_board.id %>
-        </td>
-
-        <td>
-          <%= a_board.name %>
-        </td>
-
-        <td>
-          <%= time_ago_in_words(a_board.created_at) %> ago
-        </td>
-        <td>
-          <%= time_ago_in_words(a_board.updated_at) %> ago
-        </td>
-
-        <td>
-          <a href="/boards/<%= a_board.id %>">
-            Show details
-          </a>
-        </td>
-      </tr>
-      <% end %>
-    </table>
+     <ul>
+    <% @list_of_boards.each do |a_board| %>
+      <li><a href="/boards/<%= a_board.id %>"><%= a_board.name %></a></li>
+    <% end %>
+  </ul>
   </div>
 </div>
-
-<hr>
