--- a/app/views/boards/show.html.erb
+++ b/app/views/boards/show.html.erb
@@ -1,71 +1,47 @@
 <div>
   <div>
     <h1>
-      Board #<%= @the_board.id %> details
+      <%= @the_board.name %> 
     </h1>
 
-    <div>
-      <div>
-        <a href="/boards">
-          Go back
-        </a>
-      </div>
+    <hr>
 
-      <div>
-        <a href="/delete_board/<%= @the_board.id %>">
-          Delete board
-        </a>
-      </div>
-    </div>
-
-    <dl>
-      <dt>
-        Name
-      </dt>
-      <dd>
-        <%= @the_board.name %>
-      </dd>
-
-      <dt>
-        Created at
-      </dt>
-      <dd>
-        <%= time_ago_in_words(@the_board.created_at) %> ago
-      </dd>
-
-      <dt>
-        Updated at
-      </dt>
-      <dd>
-        <%= time_ago_in_words(@the_board.updated_at) %> ago
-      </dd>
-    </dl>
   </div>
 </div>
 
+
 <hr>
 
+<h2>Add a new post</h2>
 
-<div>
+<form action="/insert_post" method="post">
   <div>
-    <h2>
-      Edit board
-    </h2>
+    <label for="title_field">Title</label>
+    <input type="text" id="title_field" name="query_title">
+  </div>
 
-    <form action="/modify_board/<%= @the_board.id %>"  method="post" >
-      <div>
-        <label for="name_box">
-          Name
-        </label>
+  <div>
+    <label for="body_field">Body</label>
+    <textarea id="body_field" name="query_body" cols="30 rows="3"></textarea>
+  </div>
 
-        <input type="text" id="name_box" name="query_name" value="<%= @the_board.name %>">
-      </div>
+  <div>
+    <label for="expires_on_field">Expires on</label>
+    <input type="date" id="expires_on_field" name="query_expires_on">
+  </div>  
 
-      <button>
-        Update board
-      </button>
+  <div>
+    <label for="board_id_field">Board ID</label>
+    <input type="text" id="board_id_field" name="query_board_id">
+  </div> 
+
+
+  <button>
+      Add post
+  </button>
     </form>
   </div>
 </div>
 
 <hr>
+
