--- a/app/views/boards/index.html.erb
+++ b/app/views/boards/index.html.erb
@@ -6,6 +6,7 @@
   </div>
 </div>
 
+<hr>
 
 <div>
   <div>
@@ -30,12 +31,13 @@
 </div>
 
 <hr>
-<div>
-  <div>
-     <ul>
-    <% @list_of_boards.each do |a_board| %>
-      <li><a href="/boards/<%= a_board.id %>"><%= a_board.name %></a></li>
-    <% end %>
-  </ul>
-  </div>
-</div>
+
+<ul>
+  <% @list_of_boards.each do |a_board| %>
+    <li>
+      <a href="/boards/<%= a_board.id %>">
+        <%= a_board.name %>
+      </a>
+    </li>
+  <% end %>
+</ul>
